Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-management-copilot-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: "/usermgmt(/|$)(.*)"
        pathType: ImplementationSpecific
        backend:
          service:
            name: user-management-copilot-service
            port:
              number: 8081
